
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int iteration ;
 int memcpy (unsigned char*,char*,int) ;
 int memset (unsigned char*,int ,int) ;
 int sprintf (char*,char*,...) ;
 int strlen (char*) ;
 int time (int *) ;

void iterate(unsigned char *nty, int *pos)
{
 char tmp[57];
 char tmp2[57];

 sprintf(tmp, "%u%u", time(((void*)0)), iteration);
 memset(&nty[pos[0]], '0', 57);
 memcpy(&nty[pos[0]], tmp, (strlen(tmp) < 57) ? strlen(tmp) : 56);

 sprintf(tmp2, "http://127.0.0.1/?%s",tmp);
 memset(&nty[pos[4]], '0', 57);
 memcpy(&nty[pos[4]], tmp2, (strlen(tmp2) < 57) ? strlen(tmp2) : 56);
}
